# engineer_quiz

./: .env.example  .gitignore  Makefile  chunks_smad.json  pyproject.toml
cli/: extract.py  extract_exam.py  generate.py  seed.py
data/: questions.json  roles.json
src/: app.py  config.py  db.py  math_grader.py  models.py  openrouter.py
src/routes/: home.py  quiz.py  results.py
src/templates/: base.html  home.html  quiz.html  results.html
tests/: test_e2e_math.py  test_math_grader.py
